EH WHATS UP DOC

--- a/sitedir/appn.html
+++ b/sitedir/appn.html
@@ -1,47 +1,128 @@
-<!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
-
+<html><!-- InstanceBegin template="/Templates/maintemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-	<link rel="shortcut icon" href="/favicon.ico" />
-	<!-- InstanceBeginEditable name="doctitle" -->
-	<title>
-		Appendix :: Aleph's Website
-	</title>
-	<meta name="title" content="Appendix" />
-	<!-- InstanceEndEditable -->
-	<meta property="og:site_name" content="Aleph's Website" />
-
-
-	<!-- InstanceBeginEditable name="SEO" -->
+<!-- InstanceBeginEditable name="SEO" -->
 	<meta name="description"
 		content="The appendix section of Aleph's Website. If you're not into legal stuff, don't care for those I thank or just want to browse the site without info like the stuff here, you don't need this page." />
 	<meta property="og:description"
 		content="The appendix section of Aleph's Website. If you're not into legal stuff, don't care for those I thank or just want to browse the site without info like the stuff here, you don't need this page." />
 	<meta property="og:type" content="website" />
-	<!-- InstanceEndEditable -->
-
-	<meta charset="utf-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-	<!-- InstanceBeginEditable name="canonical" -->
+	
+	<title>
+		Appendix :: Aleph's Website
+	</title>
+	<meta name="title" content="Appendix" />
+	
 	<link rel="canonical" href="https://badbunsen.com/appn.html" />
 	<!-- InstanceEndEditable -->
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<meta http-equiv="Content-Type" content="text/html;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style type="text/css" id="dontedit">
+  <!--
+  .hapellrollover {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 112px;
+    height: 126px;
+  }
+  -->
+</style>
+<script language="JavaScript">
+<!--
+<!-- hide
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
 
-	<link rel="stylesheet" href="/stuff/stylesheets/main.css" />
- 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
+// stop hiding -->
+
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.0
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && document.getElementById) x=document.getElementById(n); return x;
+}
+
+function MM_nbGroup(event, grpName) { //v3.0
+  var i,img,nbArr,args=MM_nbGroup.arguments;
+  if (event == "init" && args.length > 2) {
+    if ((img = MM_findObj(args[2])) != null && !img.MM_init) {
+      img.MM_init = true; img.MM_up = args[3]; img.MM_dn = img.src;
+      if ((nbArr = document[grpName]) == null) nbArr = document[grpName] = new Array();
+      nbArr[nbArr.length] = img;
+      for (i=4; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+        if (!img.MM_up) img.MM_up = img.src;
+        img.src = img.MM_dn = args[i+1];
+        nbArr[nbArr.length] = img;
+    } }
+  } else if (event == "over") {
+    document.MM_nbOver = nbArr = new Array();
+    for (i=1; i < args.length-1; i+=3) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = (img.MM_dn && args[i+2]) ? args[i+2] : args[i+1];
+      nbArr[nbArr.length] = img;
+    }
+  } else if (event == "out" ) {
+    for (i=0; i < document.MM_nbOver.length; i++) {
+      img = document.MM_nbOver[i]; img.src = (img.MM_dn) ? img.MM_dn : img.MM_up; }
+  } else if (event == "down") {
+    if ((nbArr = document[grpName]) != null)
+      for (i=0; i < nbArr.length; i++) { img=nbArr[i]; img.src = img.MM_up; img.MM_dn = 0; }
+    document[grpName] = nbArr = new Array();
+    for (i=2; i < args.length-1; i+=2) if ((img = MM_findObj(args[i])) != null) {
+      if (!img.MM_up) img.MM_up = img.src;
+      img.src = img.MM_dn = args[i+1];
+      nbArr[nbArr.length] = img;
+  } }
+}
+//-->
+</script>
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable --><!-- InstanceParam name="bgcolobg_color" type="color" value="#999999" -->
 </head>
+<body bgcolor="#999999" onload="MM_preloadImages('stuff/grafx/sitegrafx/maindesign/lookatu.gif','stuff/grafx/sitegrafx/maindesign/logo_f2.gif','stuff/grafx/sitegrafx/navbar/blog_02.gif','stuff/grafx/sitegrafx/navbar/bio_02.gif','stuff/grafx/sitegrafx/navbar/archive_02.gif','stuff/grafx/sitegrafx/navbar/art_02.gif','stuff/grafx/sitegrafx/navbar/char_02.gif','stuff/grafx/sitegrafx/navbar/appendix_02.gif')" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0" marginheight="0" marginwidth="0" text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#CC0000">
+  <table class="table" border="0" cellpadding="0" cellspacing="0" width="580">
+<!-- fwtable fwsrc="markup_fireworks.png" fwbase="markup_fireworks.gif" fwstyle="Generic" fwdocid = "742308039" fwnested=""0" -->
+  <script language="JavaScript">
+  <!-- hide 
+  if (document.images) {
+  logo_f2 = new Image(142 ,229); logo_f2.src = "logo_f2.gif";
+  logo_f1 = new Image(142 ,229); logo_f1.src = "logo.gif";
+  }
+  // stop hiding -->
+  </script>
+  <tr>
+   <td valign="top" align="left"><img src="spacer.gif" width="91" height="1" border="0"></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="51" height="1" border="0"></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="301" height="1" border="0"></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="137" height="1" border="0"></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="1" border="0"></td>
+  </tr>
 
-<body>
-    <div class="header">
-		<img src="/stuff/grafx/sitegrafx/logos/awebsite/blah_white.gif"
-		alt="Blah Guy" height="32" />
-		<img src="/stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.gif" height="32" /><br />
-		<a href="/index.html">home</a> | <a href="/art.html">art</a> | <a href="/video.html">video</a> | <a href="/char.html">characters</a> | <a href="/blog.html" target="_blank">blog</a> | <a href="/bio.html">bio</a> | <a href="/appn.html">appendix</a> | <a href="http://badbunsen.com/archive/" target="_blank">archive</a>
-    </div>
-
-    <div class="main"><!-- InstanceBeginEditable name="content" -->
+  <tr>
+    <td valign="top" align="left" rowspan="3" colspan="2"><a href="#" onMouseOut="MM_swapImgRestore()"  onMouseOver="MM_swapImage('logo','','stuff/grafx/sitegrafx/maindesign/logo_f2.gif',1)" ><img name="logo" src="stuff/grafx/sitegrafx/maindesign/logo.gif" width="142" height="229" border="0"></a></td>
+    <td valign="top" align="left"><img name="wordmark" src="stuff/grafx/sitegrafx/maindesign/wordmark.gif" width="301" height="80" border="0"></td>
+    <td valign="top" align="left" rowspan="2"><!--there was supposed to be something here but i moved it outside the table--></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="80" border="0"></td>
+  </tr>
+  <tr>
+    <td valign="top" align="left"><img name="shitspace" src="stuff/grafx/sitegrafx/maindesign/shitspace.gif" width="301" height="76" border="0"></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="76" border="0"></td>
+  </tr>
+  <tr>
+    <td valign="top" align="left" rowspan="4" colspan="2"><!-- InstanceBeginEditable name="content" -->
 		<h1>appendix</h1>
 		<p><strong>table of contents</strong>: <a href="#tott">[tools of the trade]</a> | <a href="#socialmedia">[social media]</a> | <a href="#credits">[credits]</a> | <a href="#copyright">[copyright]</a></p>
 		<h2 id="tott">tools of the trade</h2>
@@ -53,7 +134,7 @@
 		<h2 id="socialmedia">social media</h2>
 		<p>None of these are active (besides Github)... for now... but I might start using them seriously at any given time.<br />
 <!-- private			Instagram: badbunsen -->
-			Twitter (or &#x1D54F; for so-called right wing citizens of America): <a href="https://x.com/badbunsen" target="_blank">badbunsen</a><br />
+			Twitter (or X for so-called right wing citizens of America): <a href="https://x.com/badbunsen" target="_blank">badbunsen</a><br />
 			GitHub (if it counts): <a href="https://github.com/badbunsen">badbunsen</a><br />
 			Tumblr: <a href="https://badbunsen.tumblr.com" target="_blank">badbunsen.tumblr.com</a><br />
 			DeviantArt: <a href="https://www.deviantart.com/badbunsenagain" target="_blank">BadBunsenAgain</a><br />
@@ -96,20 +177,56 @@
 		<br />
 		<br />
 		<strong>TL:DR;</strong> <strong style="color: #f00"><em>DON'T</em></strong> steal, sell, repost or train AI using my works. <strong style="color: #0f0"><em>DO</em></strong> repost linking back to my accounts and/or ask permission, use my works within fair use laws and request me if you want to use my works for merchandise (which, at the moment, is not possible).
-		</p>	<!-- InstanceEndEditable --></div>
+		</p>	<!-- InstanceEndEditable --></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="73" border="0"></td>
+  </tr>
+  <tr>
+    <td valign="top" align="left" colspan="2" >
+      <table border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td valign="top" align="left"><a href="#" onClick="MM_nbGroup('down','group1','art','',1)" onMouseOver="MM_nbGroup('over','art','stuff/grafx/sitegrafx/navbar/art_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="art" src="stuff/grafx/sitegrafx/navbar/art_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+        </tr>
+		<tr>
+		  <td valign="top" align="left"><a href="/video.html" onClick="MM_nbGroup('down','group1','video','',1)" onMouseOver="MM_nbGroup('over','video','stuff/grafx/sitegrafx/navbar/video_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="video" src="stuff/grafx/sitegrafx/navbar/video_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+        </tr>
+		<tr>
+		  <td valign="top" align="left"><a href="/char.html" onClick="MM_nbGroup('down','group1','chardata','',1)" onMouseOver="MM_nbGroup('over','chardata','stuff/grafx/sitegrafx/navbar/char_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="chardata" src="stuff/grafx/sitegrafx/navbar/char_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+        </tr>
+		  <td valign="top" align="left"><a href="/blog/" onClick="MM_nbGroup('down','group1','blog','',1)" onMouseOver="MM_nbGroup('over','blog','stuff/grafx/sitegrafx/navbar/blog_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="blog" src="stuff/grafx/sitegrafx/navbar/blog_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+        </tr>
+		  <td valign="top" align="left"><a href="/bio.html" onClick="MM_nbGroup('down','group1','bio','',1)" onMouseOver="MM_nbGroup('over','bio','stuff/grafx/sitegrafx/navbar/bio_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="bio" src="stuff/grafx/sitegrafx/navbar/bio_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+         <tr>
+		  <td valign="top" align="left"><a href="/archive/" onClick="MM_nbGroup('down','group1','archive','',1)" onMouseOver="MM_nbGroup('over','archive','stuff/grafx/sitegrafx/navbar/archive_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="archive" src="stuff/grafx/sitegrafx/navbar/archive_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+        </tr>
+		<tr>
+		  <td valign="top" align="left"><a href="/appn.html" onClick="MM_nbGroup('down','group1','appendix','',1)" onMouseOver="MM_nbGroup('over','appendix','stuff/grafx/sitegrafx/navbar/appendix_02.gif','',1)" onMouseOut="MM_nbGroup('out')"><img name="appendix" src="stuff/grafx/sitegrafx/navbar/appendix_01.gif" border="0" onLoad="" width="142" height="26"></a></td>
+        </tr>
+      </table>
+    </td>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="181" border="0"></td>
+  </tr>
+  <tr>
+    <td valign="top" align="left"><a href="http://www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+					title="DMCA.com Protection Status" class="dmca-badge" target="_blank" width="100%">
+					<img src="http://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+						alt="DMCA.com Protection Status" />				</a>
+				<script src="http://images.dmca.com/Badges/DMCABadgeHelper.min.js">
+				</script></td>
+    <td valign="top" align="left"><img name="navbar_title" src="stuff/grafx/sitegrafx/maindesign/navbar_title.gif" width="51" height="21" border="0"></td>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="21" border="0"></td>
+  </tr>
+  <tr>
+    <td valign="top" align="left" colspan="2"> 
+      <p><font size="-3">Aleph's Website media and text contents copyright &copy; 
+        2022, 2023, 2025 Aleph Diallo, unless denoted otherwise. All rights reserved.</font></p>
+      <p><img src="stuff/grafx/buttons/viewdesktop_88x31.gif" width="88" height="31"><br><img src="stuff/grafx/buttons/mwm_dw_88x31.gif" width="88" height="31"><br><img src="stuff/grafx/buttons/mwm_fw_88x31.gif" width="88" height="31"></p>
+   <td valign="top" align="left"><img src="spacer.gif" width="1" height="77" border="0"></td>
+  </tr>
 
-	<div class="footer">
-		<strong>copyright info</strong> &mdash;
-		<em>Aleph's Website</em> media contents and text copyright &copy; 2025 Aleph Diallo, unless denoted otherwise. 
-		All rights reserved. <a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-			title="DMCA.com Protection Status" class="dmca-badge" target="_blank">
-			<img src="//images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
-				alt="DMCA.com Protection Status" />
-		</a>
-		<script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js">
-		</script>
-	</div>
 
-	<div class="footerspace"></div>
+</table>
+
+<a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('hapellrollover','','stuff/grafx/sitegrafx/maindesign/lookatu.gif',1)" onClick="return false;"><img name="hapellrollover" class="hapellrollover" border="0" src="stuff/grafx/sitegrafx/maindesign/lookdown.gif" width="112" height="126" align="right"></a> 
+
 </body>
 <!-- InstanceEnd --></html>
